record_replay.py works Asyncthread cleanup

--- a/dlopen_test/Makefile
+++ b/dlopen_test/Makefile
@@ -1,7 +1,7 @@
 all: dlopen
 
-#CFLAGS=-fno-gnu-unique
-CFLAGS=-g
+CFLAGS=-fno-gnu-unique
+CFLAGS+=-g
 
 mylib.o: mylib.c
 	gcc -fPIC $(CFLAGS) -c mylib.c -o mylib.o
